# tcp-struct

./: Cargo.toml  README.md
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/tcp-share/: Cargo.toml
crates/tcp-share/src/: lib.rs
crates/tcp-struct/: Cargo.toml
crates/tcp-struct-macros/: Cargo.toml
crates/tcp-struct/src/: lib.rs  util.rs
