[package]
name = "tcp-struct"
version = "0.3.0"
edition = "2021"

[dependencies]
macros = { workspace = true }
serde = { version = "1.0.210",features = ["derive"] }
thiserror = "1.0.64"
log = "0.4.22"
bincode = "1.3.3"
tokio = { version = "1.40.0", default-features = false, features = ["rt", "sync"] }

[features]
default = ["async-tcp"]
async-tcp = ["tokio/net", "tokio/net", "tokio/io-util", "macros/async-tcp"]
